Harden Phase 7 MVCC commit recovery and shutdown semantics